Improving the local permissions setup when interacting with the volume

--- a/.env
+++ b/.env
@@ -1,4 +1,9 @@
 PROJECT_ROOT=./www/public_html
+APP_VERSION=0.2.0
 APP_PORT=8008
+DB_VERSION=5.7
 DB_PORT=3308
 XDB_PORT=33080
+DB_ROOT_PASS=pass_j4x
+DB_NAME=bdd_j4x
+CACHE_VERSION=5.0.7
